# XOR-MAILER

./: .gitignore  Cargo.toml  README.md  deny.toml
XorMailer/: Cargo.toml
XorMailer/src/: lib.rs  mailer.rs
XorMailerCommon/: Cargo.toml
XorMailerCommon/src/: envelope.rs  lib.rs
src/: attachment.rs  config.rs  envelope_builder.rs  lib.rs  mailer.rs
